<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BuggyCalculator</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="_1">1</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="_9">9</string>
    <string name="_3">3</string>
    <string name="_7">7</string>
    <string name="_6">6</string>
    <string name="_0">0</string>
    <string name="_8">8</string>
    <string name="_2">2</string>
    <string name="_Eq">=</string>
    <string name="_Dot">.</string>
    <string name="_Add">+</string>
    <string name="_Sub">-</string>
    <string name="_Mul">*</string>
    <string name="_Div">/</string>
    <string name="_C">C</string>
    <string name="_CE">CE</string>
    <string name="_Back">Back</string>

</resources>